@@ -1,1 +1,1 @@
-(10 + 4) < 10 && (10 + 5) > 4
+10
